completed home page header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/WebBanner_001_ALL\ size_V2.png') no-repeat center center fixed;
+    background: url('/media/Wake-Vape-e-liquids-at-Vapeaholic-UK_banner_mobile.png') no-repeat center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
