added product detail functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,3 +93,13 @@ body {
         padding-top: 164px;
     }
 }
+
+/* Pad the top on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 200px;
+    }
+    body {
+        height: calc(100vh - 200px);
+    }
+}
